# FAIC_Node

./: Cargo.toml
src/: error.rs  main.rs
src/api/: mod.rs
src/blockchain/: block.rs  chain.rs  mod.rs  transaction.rs
src/network/: mod.rs  peer.rs  server.rs
src/wallet/: mod.rs
